--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsx watch src/server.ts",
     "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
